# open_wdr

./: .gitignore  CMakeLists.txt  README.es.md  README.md  REPRODUCIBILITY_GUIDE.md  TROUBLESHOOTING.md  aac_algorithm.md  batching_summary.md  compressed_lena.u  compressed_lena.v  compressed_lena.y  diagnose_compression.py  main.py  project.md  pyproject.toml  requirements.txt  setup.py  wdr_algorithm.md  wdr_helpers.py
docs/: theory.es.md  theory.md
scripts/: bigtiff_pipeline.py  cwdr_bigtiff_pipeline.py  wdr_wsi_pipeline.py  wsi_info.py  wsi_metrics.py
src/: adaptive_model.cpp  adaptive_model.hpp  arithmetic_coder.cpp  arithmetic_coder.hpp  bindings.cpp  bit_stream.cpp  bit_stream.hpp  cwdr_processor.cpp  cwdr_processor.hpp  wdr_compressor.cpp  wdr_compressor.hpp  wdr_debug.hpp  wdr_file_format.hpp
tests/: README.md  debug_wdr_decompression.py  test_batched_metrics.py  test_container.py  test_metrics.py  test_tiled_pipeline.py  test_wdr_coder.py  test_wdr_helpers.py
tests/test_cpp/: CMakeLists.txt  mock_arithmetic_coder.cpp  mock_arithmetic_coder.hpp  test_adaptive_model.cpp  test_arithmetic_coder.cpp  test_bit_stream.cpp  test_differential_coding.cpp  test_wdr_compressor.cpp  test_wdr_compressor_passes.cpp  test_wdr_compressor_roundtrip.cpp  test_wdr_file_format.cpp
wdr/: __init__.py  container.py  io.py
wdr/utils/: __init__.py  batched_metrics.py  helpers.py  metrics.py  tile_reader.py
